--- a/src/variables.scss
+++ b/src/variables.scss
@@ -18,4 +18,6 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-$brand-primary: #182b3a;
+$titulo: #f05a59;
+$fundo-01: #1f2234;
+$fundo-02: #11131d;
