--- a/src/variables.scss
+++ b/src/variables.scss
@@ -18,6 +18,6 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-$titulo: #f05a59;
+$titulo: #e1e1e1;
 $fundo-01: #1f2234;
 $fundo-02: #11131d;
